[package]
name = "threaded-map"
authors = ["Richard Neumann <mail@richard-neumann.de>"]
description = "Encode bytes as ANSI background colors"
license = "MIT"
homepage = "https://github.com/conqp/threaded-map/"
repository = "https://github.com/conqp/threaded-map/"
readme = "README.md"
documentation = "https://docs.rs/threaded-map"
keywords = [ "threaded", "mapping"]
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "1.8.1"
